--- a/src/core/core.csproj
+++ b/src/core/core.csproj
@@ -7,7 +7,9 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <RootNamespace>ChrlsChn.Momo</RootNamespace>
     <NoWarn>CA1848;CS1591</NoWarn>
-    <!-- Generate XML documentation for Swagger docs; see SetupSwagger.cs -->
+    <!--
+      👇 Generate XML documentation for Swagger docs; see SetupSwaggerExtension.cs
+    -->
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
@@ -16,7 +18,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.9.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,11 +27,9 @@
   </ItemGroup>
 
   <!--
-    Generates the OpenAPI schema file into api-spec directory.
-
-    GET=true dotnet build
+    👇 Generates the OpenAPI schema file into api-spec directory.
   -->
-  <Target Name="GenerateSpec" AfterTargets="Build" Condition="$(Configuration)=='Gen' Or $(GEN)=='true'">
+  <Target Name="GenerateSpec" AfterTargets="Build" Condition="$(GEN)=='true'">
     <Message Text="Generating OpenAPI schema file." Importance="high" />
     <Exec Command="dotnet tool restore" />
     <!-- Generate the external API.  See SetupSwagger for this doc. -->
