--- a/src/core/appsettings.json
+++ b/src/core/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "MoMoConfig":
-  {
-    "Database":
-    {
+  "MoMoConfig": {
+    "Database": {
       "ConnectionString": "server=127.0.0.1;port=5432;database=momo;user id=postgres;password=postgres;include error detail=true;"
+    }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   }
 }
