--- a/docker-compose-run.yaml
+++ b/docker-compose-run.yaml
@@ -23,15 +23,37 @@ services:
     networks:
       - momo
 
+  # The main API instance set to enable default routes and reporting
   api:
     image: momo/api
     build:
       context: ./
       dockerfile: ./Dockerfile.core
+    environment:
+      - ENABLE_DEFAULT_ROUTES=true # Load default routes
+      - ENABLE_REPORTING_ROUTES=true # Load reporting routes
     expose:
       - 8080
     ports:
       - "8080:8080"
+    depends_on:
+      - postgres
+    networks:
+      - momo
+
+  # The main API instance set to enable default routes and reporting
+  admin:
+    image: momo/api
+    build:
+      context: ./
+      dockerfile: ./Dockerfile.core
+    environment:
+      - ENABLE_ADMIN_ROUTES=true # Only load admin routes
+      - SKIP_DB_RESET=true # Here, we don't reset the DB; we do it in the other instance.
+    expose:
+      - 8081
+    ports:
+      - "8081:8080"
     depends_on:
       - postgres
     networks:
